--- a/website/app/assets/stylesheets/main.css
+++ b/website/app/assets/stylesheets/main.css
@@ -1,9 +1,13 @@
 body {
-  /*font-family: "Open Sans", sans-serif;*/
-  background-color: #dddddd;
-  /*background-color: #008c78;*/
+  background-color: #4C5C68;
+
+  /*background: linear-gradient(linear to right, #0080aa, #838996);*/
+  /*background-color: #8b8589;*/
+    /*background-color: #838996;*/
+
   font-family: 'Cantarell', sans-serif;
   margin-top: 0;
+  cursor: url(/assets/paws.png), auto;
 }
 .container {
   width: 1450px;
@@ -12,12 +16,12 @@ body {
 }
 .header {
   display: inline-block;
-  background-color: #dddddd;
-  color: #5d5c58;
-  width: 1227px;
+  background-color: #4C5C68;
+  color: #dddddd;
+  width: 1225px;
   height: 60px;
   position: fixed;
-  margin: 0 0 0 90px;
+  margin: 0 0 0 100px;
 }
 
 
@@ -32,7 +36,7 @@ body {
 
 .header h1 a {
   text-decoration: none;
-  color: #5d5c58;
+  color: #dddddd;
 
 }
 
@@ -49,7 +53,9 @@ body {
 }
 
 .icons a{
-  color: #0bc4d0;
+  /*color: #0bc4d0;*/
+  color: #dddddd;
+
 }
 
 
@@ -66,7 +72,8 @@ body {
 .buttons a {
   font-weight: 700;
   text-decoration: none;
-  color: #5d5c58;
+  /*color: #5d5c58;*/
+  color: #dddddd;
   font-size: 20px;
 }
 
@@ -86,21 +93,31 @@ body {
 
 .left .small {
   display: inline-block;
-  width: 400px;
+  width: 430px;
   height: 340px;
   float: left;
-  background-color: #cccccc;
-  margin-top:350px;
+  background-color: #C5C3C6;
+  margin-top:390px;
 }
 
 .small p{
   font-size: 20px;
-  padding: 20px;
-  color: #5d5c58;
+  padding: 0px 0px 0 20px;
+  color: #46494C;
 }
 
-.small .arrows {
-  color: #5d5c58;
+.small .fortune {
+  font-size: 30px;
+  padding: 10px;
+  margin: 10px;
+  color: #1b0d69;
+  font-family: 'Poiret One', cursive;
+  font-weight: bolder;
+  border: 4px dotted #1b0d69;
+}
+
+.small .bold {
+  font-weight: bolder;
 }
 
 .boxes {
@@ -114,23 +131,23 @@ body {
 
 .box .info1 {
   text-align: justify;
-  width: 720px;
+  width: 600px;
   height: 220px;
-  padding: 0px 40px 40px 40px;
+  padding: 0 90px 90px 90px;
   font-family: 'Cantarell', sans-serif;
   /*font-family: "Open Sans", sans-serif;*/
 }
 
-.box .info1 a {
+.box .info1 .a {
   font-weight: 700;
   text-decoration: none;
-  color: #5d5c58;
+  color: #46494C;
 }
 
  .text_above .box{
-   color: #5d5c58;
+   color: #46494C;
    font-size: 16px;
-   background-color: #cccccc;
+   background-color: #C5C3C6;
    text-align: left;
    height: 340px;
    width: 800px;
@@ -142,7 +159,7 @@ body {
 
 .text_above .box h2 {
   font-family: 'Cantarell', sans-serif;
-  padding: 10px 15px 0 35px;
+  padding: 10px 15px 0 85px;
   font-weight: bold;
   font-size: 20px;
   /*font-family: "Open Sans", sans-serif;*/
@@ -150,8 +167,8 @@ body {
 }
 
 .text_below .box {
-  background-color: #cccccc;
-  color: #5d5c58;
+  background-color: #C5C3C6;
+  color: #46494C;
   float: right;
   text-align: left;
   height: 340px;
@@ -159,21 +176,6 @@ body {
   margin: 5px 10px 0 10px;
 }
 
-
-/*.text_below .box2 h2 {
-  padding: 0 15px 0 15px;
-  font-weight: bold;
-  font-size: 30px;
-}*/
-
-
-.text_below h2 {
-  padding: 20px;
-  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size: 20px;
-  margin: 0;
-  padding: 10px 0 0 15px;
-}
 
  .P1 {
   display: inline-block;
@@ -190,13 +192,13 @@ body {
 }
 
  .apps {
-  background-color: #cccccc;
-  color: #5d5c58;
+  background-color: #C5C3C6;
+  color: #46494C;
   float: right;
   text-align: left;
   height: 340px;
   width: 800px;
-  margin: 10px 10px 0 10px;
+  margin: 50px 10px 0 0;
 }
 
 .apps .P1 {
@@ -209,9 +211,9 @@ body {
 }
 
 .resume .box {
-  color: #5d5c58;
+  color: #46494C;
   font-size: 16px;
-  background-color: #cccccc;
+  background-color: #C5C3C6;
   text-align: left;
   height: 1300px;
   width: 1224px;
@@ -228,9 +230,10 @@ body {
 }
 
 .posts {
-  color: #5d5c58;
+  color: #46494C;
   font-size: 16px;
-  background-color: #cccccc;
+  opacity: .7;
+  background-color: #C5C3C6;
   text-align: left;
   height: 1300px;
   width: 1224px;
@@ -239,7 +242,8 @@ body {
 }
 
 .posts h2 {
-  margin: 15px 0 0 40px;
+  margin: 15px 0 0 0;
+  font-weight: bolder;
 }
 .posts .post1 {
   padding: 40px;
