--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,11 +1,6 @@
 body {
-  background-color: #4C5C68;
 
-  /*background: linear-gradient(linear to right, #0080aa, #838996);*/
-  /*background-color: #8b8589;*/
-    /*background-color: #838996;*/
-
-  font-family: 'Cantarell', sans-serif;
+  font-family: 'Merriweather', serif;
   margin-top: 0;
   cursor: url(/assets/paws.png), auto;
 }
@@ -14,10 +9,10 @@ body {
   height: 65px;
 
 }
+
 .header {
   display: inline-block;
-  background-color: #4C5C68;
-  color: #dddddd;
+  color: black;
   width: 1225px;
   height: 60px;
   position: fixed;
@@ -26,17 +21,17 @@ body {
 
 
 .container .header h1 {
-  font-family: 'Cantarell', sans-serif;
   display: inline-block;
   float: left;
   font-size: 30px;
   margin: 0 0 0 10px;
+  color: black;
 
 }
 
 .header h1 a {
   text-decoration: none;
-  color: #dddddd;
+  color: black;
 
 }
 
@@ -53,16 +48,14 @@ body {
 }
 
 .icons a{
-  /*color: #0bc4d0;*/
-  color: #dddddd;
-
+  color: black;
 }
 
 
 .header .navigation .buttons p {
   display: inline-block;
   font-family: 'Cantarell', sans-serif;
-  color: #5d5c58;
+  color: black;
   float: left;
   width: auto;
   padding: 10px;
@@ -72,9 +65,60 @@ body {
 .buttons a {
   font-weight: 700;
   text-decoration: none;
-  /*color: #5d5c58;*/
-  color: #dddddd;
+  color: black;
   font-size: 20px;
+}
+
+.upper {
+  display: inline-block;
+  background-image: url(/assets/orange.jpg);
+  width:100%;
+  height:480px;
+  background-size:cover;
+  background-position:center;
+  background-repeat: no-repeat;
+}
+
+.upper h2 {
+  text-align: center;
+  padding: 150px 50px 50px 50px;
+  color: #dddddd;
+}
+
+.center {
+  display: inline-block;
+  width: 100%;
+  height:480px;
+  background-size:cover;
+  background-position:center;
+
+}
+
+.center h2 {
+  text-align: center;
+  padding: 50px;
+}
+
+.lower {
+  display: inline-block;
+  background-image: url(/assets/blue.jpg);
+  background-repeat: no-repeat;
+  width:100%;
+  height:480px;
+  background-size:cover;
+  background-position:center;
+  background-repeat: no-repeat;
+}
+
+.lower h2 {
+  text-align: center;
+  padding: 50px ;
+
+}
+
+.lower p {
+  text-align: left;
+  padding: 20px 300px 20px 300px;
 }
 
 .left {
