--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -2,7 +2,7 @@ body {
 
   font-family: 'Merriweather', serif;
   margin-top: 0;
-  cursor: url(/assets/paws.png), auto;
+  cursor: image-url("paws.png"), auto;
 }
 .container {
   width: 1450px;
@@ -54,7 +54,7 @@ body {
 
 .header .navigation .buttons p {
   display: inline-block;
-  font-family: 'Cantarell', sans-serif;
+
   color: black;
   float: left;
   width: auto;
@@ -71,7 +71,7 @@ body {
 
 .upper {
   display: inline-block;
-  background-image: url(/assets/orange.jpg);
+  background-image: image-url("orange.jpg");
   width:100%;
   height:480px;
   background-size:cover;
@@ -101,7 +101,7 @@ body {
 
 .lower {
   display: inline-block;
-  background-image: url(/assets/blue.jpg);
+  background-image: image-url("blue.jpg");
   background-repeat: no-repeat;
   width:100%;
   height:480px;
