--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,10 +1,11 @@
 body {
-
   font-family: 'Merriweather', serif;
   margin-top: 0;
   cursor: image-url("paws.png"), auto;
 }
+
 .container {
+  background-color: rgba(245, 245, 245, 0.7);
   width: 1450px;
   height: 65px;
 
@@ -12,11 +13,13 @@ body {
 
 .header {
   display: inline-block;
+  background-color: #FFFFFF;
   color: black;
-  width: 1225px;
+  width: 100%;
+  // width: 1225px;
   height: 60px;
   position: fixed;
-  margin: 0 0 0 100px;
+  padding: 0 0 0 100px;
 }
 
 
@@ -71,7 +74,8 @@ body {
 
 .upper {
   display: inline-block;
-  background-image: image-url("orange.jpg");
+  background-image: url("/assets/karen.jpg");
+  background-color: rgba(212, 110, 59, 1.0);
   width:100%;
   height:480px;
   background-size:cover;
@@ -80,9 +84,9 @@ body {
 }
 
 .upper h2 {
-  text-align: center;
-  padding: 150px 50px 50px 50px;
-  color: #dddddd;
+  float: right;
+  padding: 75px 50px 150px 50px;
+  color: black;
 }
 
 .center {
@@ -96,13 +100,12 @@ body {
 
 .center h2 {
   text-align: center;
-  padding: 50px;
+  padding: 25px;
 }
 
 .lower {
   display: inline-block;
-  background-image: image-url("blue.jpg");
-  background-repeat: no-repeat;
+  background-color: rgba(227, 127, 9, 0.8);
   width:100%;
   height:480px;
   background-size:cover;
@@ -111,14 +114,26 @@ body {
 }
 
 .lower h2 {
-  text-align: center;
-  padding: 50px ;
+  font-size: 40px;
+  text-align: left;
+  padding: 25px 0 0 200px;
 
 }
 
 .lower p {
   text-align: left;
-  padding: 20px 300px 20px 300px;
+  padding: 0 300px 20px 200px;
+}
+
+.lower .fortune {
+  display: inline-block;
+  padding: 50px 10px 0 200px;
+  font-style: italic;
+}
+
+.lower .fortunes {
+  display: inline-block;
+  font-style: italic;
 }
 
 .left {
@@ -236,13 +251,11 @@ body {
 }
 
  .apps {
-  background-color: #C5C3C6;
   color: #46494C;
-  float: right;
-  text-align: left;
+  text-align: center;
   height: 340px;
-  width: 800px;
-  margin: 50px 10px 0 0;
+  width: 80%;
+  padding: 0 0 0 250px;
 }
 
 .apps .P1 {
@@ -250,14 +263,14 @@ body {
   text-align: center;
   width: 231px;
   height: 330px;
-  float: left;
-  padding: 25px 15px 15px 15px;
+  padding: 0 45px 0 45px;
 }
 
 .resume .box {
   color: #46494C;
   font-size: 16px;
-  background-color: #C5C3C6;
+  background-color: rgba(249, 239, 245, 0.3);
+  // background-color: #f5f9f4;
   text-align: left;
   height: 1300px;
   width: 1224px;
