--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -74,7 +74,7 @@ body {
 
 .upper {
   display: inline-block;
-  background-image: url("/assets/karen.jpg");
+  background-image: image-url("karen.jpg");
   background-color: rgba(212, 110, 59, 1.0);
   width:100%;
   height:480px;
