--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -103,20 +103,34 @@ body {
   padding: 25px;
 }
 
-.lower {
+.apps {
+ display: inline-block;
+ text-align: center;
+ color: #46494C;
+ height: 340px;
+ width: 100%;
+
+}
+
+.apps .P1 {
   display: inline-block;
+  width: 231px;
+  height: 330px;
+  padding: 25px 40px 15px 40px;
+
+}
+
+
+.lower {
   background-color: rgba(227, 127, 9, 0.8);
-  width:100%;
+  width: 100%;
   height:480px;
-  background-size:cover;
-  background-position:center;
-  background-repeat: no-repeat;
 }
 
 .lower h2 {
   font-size: 40px;
   text-align: left;
-  padding: 25px 0 0 200px;
+  padding: 10px 0 0 200px;
 
 }
 
@@ -236,35 +250,14 @@ body {
 }
 
 
- .P1 {
-  display: inline-block;
-  text-align: center;
-  width: 231px;
-  height: 330px;
-  float: left;
-  padding: 25px 15px 15px 15px;
-}
 
-.P1 .round {
-  border-radius: 6px;
-  border: 2px solid #5d5c58;;
-}
 
- .apps {
-  color: #46494C;
-  text-align: center;
-  height: 340px;
-  width: 80%;
-  padding: 0 0 0 250px;
-}
+// .P1 .round {
+//   border-radius: 6px;
+//   border: 2px solid #5d5c58;;
+// }
 
-.apps .P1 {
-  display: inline-block;
-  text-align: center;
-  width: 231px;
-  height: 330px;
-  padding: 0 45px 0 45px;
-}
+
 
 .resume .box {
   color: #46494C;
