--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -103,6 +103,8 @@ body {
   padding: 25px;
 }
 
+
+
 .apps {
  display: inline-block;
  text-align: center;
@@ -115,8 +117,8 @@ body {
 .apps .P1 {
   display: inline-block;
   width: 231px;
-  height: 330px;
-  padding: 25px 40px 15px 40px;
+  height: 100%;
+  padding: 0 40px 15px 40px;
 
 }
 
@@ -130,18 +132,18 @@ body {
 .lower h2 {
   font-size: 40px;
   text-align: left;
-  padding: 10px 0 0 200px;
+  padding: 10px 0 0 300px;
 
 }
 
 .lower p {
   text-align: left;
-  padding: 0 300px 20px 200px;
+  padding: 0 300px 20px 300px;
 }
 
 .lower .fortune {
   display: inline-block;
-  padding: 50px 10px 0 200px;
+  padding: 50px 10px 0 300px;
   font-style: italic;
 }
 
@@ -250,12 +252,6 @@ body {
 }
 
 
-
-
-// .P1 .round {
-//   border-radius: 6px;
-//   border: 2px solid #5d5c58;;
-// }
 
 
 
