--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -130,9 +130,9 @@ body {
 }
 
 .lower h2 {
-  font-size: 40px;
+  font-size: 42px;
   text-align: left;
-  padding: 10px 0 0 300px;
+  padding: 20px 0 0 300px;
 
 }
 
@@ -278,7 +278,7 @@ body {
 .posts {
   color: #46494C;
   font-size: 16px;
-  background-color: #C5C3C6;
+  background-color: rgba(249, 239, 245, 0.3);
   text-align: left;
   height: 1300px;
   width: 1224px;
