--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
       <h1><%= link_to "Karen Hambro", "/", class:"hvr-float-shadow"%></h1>
       <div class = "navigation">
          <div class = "buttons">
-           <p><%= link_to "Blog", "/blog", class:"hvr-float-shadow"%></p>
+           <p><%= link_to "Projects", "/projects", class:"hvr-float-shadow"%></p>
            <p>//</p>
            <p><%=link_to "Resume", "/resume", class: "hvr-float-shadow"%></p>
          </div>
