--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -110,14 +110,16 @@ body {
  text-align: center;
  color: #46494C;
  height: 340px;
- width: 100%;
+ width: 1000px;
+ margin: 0 250px 0 250px;
 
 }
 
 .apps .P1 {
   display: inline-block;
+  float: left;
   width: 231px;
-  height: 100%;
+  height: 355px;
   padding: 0 40px 15px 40px;
 
 }
