--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -74,8 +74,8 @@ body {
 
 .upper {
   display: inline-block;
-  background-image: image-url("karen.jpg");
-  background-color: rgba(212, 110, 59, 1.0);
+  background-image: image-url("karen_2.jpg");
+  // background-color: rgba(212, 110, 59, 1.0);
   width:100%;
   height:480px;
   background-size:cover;
@@ -126,7 +126,8 @@ body {
 
 
 .lower {
-  background-color: rgba(227, 127, 9, 0.8);
+  background-color: rgba(45, 210, 232, 0.7);
+  // background-color: rgba(227, 127, 9, 0.8);
   width: 100%;
   height:480px;
 }
