--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,12 +1,12 @@
 body {
-  font-family: 'Merriweather', serif;
+  // font-family: 'Merriweather', serif;
   margin-top: 0;
   cursor: image-url("paws.png"), auto;
 }
 
 .container {
   background-color: rgba(245, 245, 245, 0.7);
-  width: 1450px;
+  width: auto;
   height: 65px;
 
 }
@@ -16,10 +16,8 @@ body {
   background-color: #FFFFFF;
   color: black;
   width: 100%;
-  // width: 1225px;
   height: 60px;
   position: fixed;
-  padding: 0 0 0 100px;
 }
 
 
@@ -40,14 +38,14 @@ body {
 
 .header .navigation {
   display: inline-block;
-  margin: 0 0 0 0;
+  margin: 0 100px 0 0;
   float: right;
-  width: 600px;
+  width: 500px;
+
 }
 .header .navigation .icons {
-  float: right;
-  margin-right: 10px;
-  margin-top: 10px;
+  float: left;
+  margin: 14px 0 0 175px;
 }
 
 .icons a{
@@ -62,7 +60,7 @@ body {
   float: left;
   width: auto;
   padding: 10px;
-  margin: 0 50px 0 0;
+  margin: 0;
 }
 
 .buttons a {
@@ -108,6 +106,7 @@ body {
 .apps {
  display: inline-block;
  text-align: center;
+ font-size: 16px;
  color: #46494C;
  height: 340px;
  width: 1000px;
@@ -141,6 +140,7 @@ body {
 
 .lower p {
   text-align: left;
+  font-size: 20px;
   padding: 0 300px 20px 300px;
 }
 
@@ -154,6 +154,7 @@ body {
   display: inline-block;
   font-style: italic;
 }
+
 
 .left {
   display: inline-block;
