--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,12 @@
 <html>
   <body>
 
-    <div class= "upper">
+    <div class= "upper twelve columns">
       <h2>full stack ruby developer in training</h2>
     </div>
 
 
-    <div class = "center">
+    <div class = "center twelve columns">
       <h2>my projects</h2>
         <div class= "apps">
             <% @projects.shuffle.each do |projects| %>
@@ -20,7 +20,7 @@
     </div>
 
 
-    <div class= "lower">
+    <div class= "lower twelve columns">
       <h2>Me</h2>
       <p>Hi! I'm Karen Hambro, a software developer in training at <%= link_to "Code Builders", "http://code.builders/", class: "a" %>. I have worked in the tech industry for quite a few years, most recently with <%= link_to 'Ada Developers Academy', 'http://adadevelopersacademy.org/', class: "a" %>. Having worked to place over 60 women in software development roles in local tech companies, it's now my turn to build, create, and start down the path of my own adventures in programming.
       <hr>
@@ -32,6 +32,7 @@
         <div class= "fortunes">
           <% f = FortuneCookie.new %>
         <i class="fa fa-quote-left fa-lg"></i>  <%= f.fortune %><i class="fa fa-quote-right fa-lg"></i>
+        (refresh page for new fortune)
         </div>
       </p>
 
