--- a/app/views/home/projects.html.erb
+++ b/app/views/home/projects.html.erb
@@ -1,5 +1,5 @@
 <%require 'time' %>
-<div class="posts">
+<div class="posts ten columns">
   <div class= "post1">
   <h3><%=Time.now.strftime("%b %e, %l:%M %p")%></h3>
     <h2>Stay tuned! Work being posted soon.</h2>
