--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
 <body>
 
 
-  <div class="container">
-    <div class="header">
+  <div class="container twelve columns">
+    <div class="header" >
       <h1><%= link_to "Karen Hambro", "/", class:"hvr-float-shadow"%></h1>
       <div class = "navigation">
          <div class = "buttons">
