--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -73,7 +73,6 @@ body {
 .upper {
   display: inline-block;
   background-image: image-url("karen_2.jpg");
-  // background-color: rgba(212, 110, 59, 1.0);
   width:100%;
   height:480px;
   background-size:cover;
@@ -83,8 +82,31 @@ body {
 
 .upper h2 {
   float: right;
-  padding: 75px 50px 150px 50px;
+  margin: 75px 50px 0 50px;
   color: black;
+}
+
+.button {
+  display: inline-block;
+  float: right;
+  // border: 3px solid #ffffff;
+  // border-radius: 50px;
+  // -moz-border-radius: 50px;
+  // -webkit-border-radius: 50px;
+  margin: 100px 300px 0 600px;
+  height: 100px;
+  width: 30px;
+  font-family: Arial, sans-serif;
+  font-size: 40px;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-decoration: none;
+  text-align: center;
+  // transition: all 0.3s ease 0s;
+}
+
+.button:hover {
+  background-color: rgba(255,255,255,.25)
 }
 
 .center {
